--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,10 @@ SLACK_TOKEN = ""
 SIGNING_SECRET = ""
 
 # Look at https://api.slack.com/apps/A0367DCH6A0/event-subscriptions? for the redirect uri
+
+# Found at:
+# https://profile.intra.42.fr/oauth/applications/8540
+WEBHOOK_SECRET = ""
+
+# path to recieve requests on
+EVENT_ENDPOINT = "/slack/events"
