--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,9 @@ SLACK_TOKEN = ""
 SIGNING_SECRET = ""
 
 # Look at https://api.slack.com/apps/A0367DCH6A0/event-subscriptions? for the redirect uri
+
+# Webhook Secret for the Intra API (X-Secret header)
+WEBHOOK_SECRET = ""
+
+# User ID for peerplusplus_bot account on Intra (placeholder for evaluations)
+PEERPP_BOT_UID = "111044"
