add required constants

--- a/.env-example
+++ b/.env-example
@@ -13,4 +13,7 @@ SIGNING_SECRET = ""
 WEBHOOK_SECRET = ""
 
 # User ID for peerplusplus_bot account on Intra (placeholder for evaluations)
-PEERPP_BOT_UID = "111044"
+PEERPP_BOT_UID = 111044
+
+# Peer++ group ID on Intra (assign users to this group to authorize them to do peer++ evals)
+PEERPP_GROUP_ID = 63
