feat: add very basic message parsing

--- a/.env-example
+++ b/.env-example
@@ -20,3 +20,6 @@ PEERPP_BOT_UID = 111044
 
 # Peer++ group ID on Intra (assign users to this group to authorize them to do peer++ evals)
 PEERPP_GROUP_ID = 63
+
+# https://app.slack.com/app-settings/T03652S1FFU/A0367DCH6A0/socket-mode
+SLACK_APP_TOKEN = "xapp-1-..."
