--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"removeComments": true,
 		"downlevelIteration": false,
 		// "strict": true,
-		"noImplicitAny": true,
+		// "noImplicitAny": true,
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"strictBindCallApply": true,
