--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "",
 	"main": "src/app.ts",
 	"dependencies": {
+		"@slack/bolt": "^3.11.1",
+		"@slack/types": "^2.5.0",
+		"@types/dotenv": "^8.2.0",
+		"dotenv": "^16.0.1",
 		"typescript": "^4.2.4"
 	},
 	"devDependencies": {
