--- a/.env-example
+++ b/.env-example
@@ -23,3 +23,8 @@ PEERPP_GROUP_ID = 63
 
 # https://app.slack.com/app-settings/T03652S1FFU/A0367DCH6A0/socket-mode
 SLACK_APP_TOKEN = "xapp-1-..."
+
+# Intra application keys
+# See https://profile.intra.42.fr/oauth/applications/7736
+INTRA_UID =
+INTRA_SECRET =
