--- a/env/project_slugs.json
+++ b/env/project_slugs.json
@@ -1,31 +1,31 @@
 {
-	"libft": 1314,
-	"born2beroot": 1994,
-	"ft_printf": 1316,
-	"get_next_line": 1327,
-	"push_swap": 1471,
-	"minitalk": 2005,
-	"pipex": 2004,
-	"so_long": 2009,
-	"fdf": 2008,
-	"fract-ol": 1476,
-	"minishell": 1331,
-	"philosophers": 1334,
-	"minirt": 1315,
-	"cub3d": 1326,
-	"cpp-module-00": 1338,
-	"cpp-module-01": 1339,
-	"cpp-module-02": 1340,
-	"cpp-module-03": 1341,
-	"cpp-module-04": 1342,
-	"cpp-module-05": 1343,
-	"cpp-module-06": 1344,
-	"cpp-module-07": 1345,
-	"cpp-module-08": 1346,
-	"netpractice": 2007,
-	"inception": 1983,
-	"ft_irc": 1336,
-	"webserv": 1332,
-	"ft_containers": 1335,
-	"ft_transcendence": 1337
+	"1314": "libft",
+	"1994": "born2beroot",
+	"1316": "ft_printf",
+	"1327": "get_next_line",
+	"1471": "push_swap",
+	"2005": "minitalk",
+	"2004": "pipex",
+	"2009": "so_long",
+	"2008": "fdf",
+	"1476": "fract-ol",
+	"1331": "minishell",
+	"1334": "philosophers",
+	"1315": "minirt",
+	"1326": "cub3d",
+	"1338": "cpp-module-00",
+	"1339": "cpp-module-01",
+	"1340": "cpp-module-02",
+	"1341": "cpp-module-03",
+	"1342": "cpp-module-04",
+	"1343": "cpp-module-05",
+	"1344": "cpp-module-06",
+	"1345": "cpp-module-07",
+	"1346": "cpp-module-08",
+	"2007": "netpractice",
+	"1983": "inception",
+	"1336": "ft_irc",
+	"1332": "webserv",
+	"1335": "ft_containers",
+	"1337": "ft_transcendence"
 }
