--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
 	"description": "",
 	"main": "src/app.ts",
 	"dependencies": {
+		"dotenv": "^16.0.1",
+		"node-fetch": "^2.1.0",
+		"pretty-ms": "^7.0.0",
+		"typescript": "^4.2.4",
+		"url-parameter-append": "^1.0.5"
+	},
+	"devDependencies": {
 		"@slack/bolt": "^3.11.1",
 		"@slack/types": "^2.5.0",
 		"@types/dotenv": "^8.2.0",
-		"dotenv": "^16.0.1",
-		"typescript": "^4.2.4"
-	},
-	"devDependencies": {
 		"@types/node": "^15.0.1",
+		"@types/node-fetch": "^2.1.0",
 		"ts-node-dev": "^1.1.6"
 	},
 	"scripts": {
