feat: better key value storage

--- a/env/project_slugs.json
+++ b/env/project_slugs.json
@@ -1,31 +1,31 @@
-{
-	"1314": "libft",
-	"1994": "born2beroot",
-	"1316": "ft_printf",
-	"1327": "get_next_line",
-	"1471": "push_swap",
-	"2005": "minitalk",
-	"2004": "pipex",
-	"2009": "so_long",
-	"2008": "fdf",
-	"1476": "fract-ol",
-	"1331": "minishell",
-	"1334": "philosophers",
-	"1315": "minirt",
-	"1326": "cub3d",
-	"1338": "cpp-module-00",
-	"1339": "cpp-module-01",
-	"1340": "cpp-module-02",
-	"1341": "cpp-module-03",
-	"1342": "cpp-module-04",
-	"1343": "cpp-module-05",
-	"1344": "cpp-module-06",
-	"1345": "cpp-module-07",
-	"1346": "cpp-module-08",
-	"2007": "netpractice",
-	"1983": "inception",
-	"1336": "ft_irc",
-	"1332": "webserv",
-	"1335": "ft_containers",
-	"1337": "ft_transcendence"
-}
+[
+	{ "id":1314, "slug": "libft"			},
+	{ "id":1994, "slug": "born2beroot"		},
+	{ "id":1316, "slug": "ft_printf"		},
+	{ "id":1327, "slug": "get_next_line"	},
+	{ "id":1471, "slug": "push_swap"		},
+	{ "id":2005, "slug": "minitalk"			},
+	{ "id":2004, "slug": "pipex"			},
+	{ "id":2009, "slug": "so_long"			},
+	{ "id":2008, "slug": "fdf"				},
+	{ "id":1476, "slug": "fract-ol"			},
+	{ "id":1331, "slug": "minishell" 		},
+	{ "id":1334, "slug": "philosophers"	 	},
+	{ "id":1315, "slug": "minirt" 			},
+	{ "id":1326, "slug": "cub3d" 			},
+	{ "id":1338, "slug": "cpp-module-00"	},
+	{ "id":1339, "slug": "cpp-module-01"	},
+	{ "id":1340, "slug": "cpp-module-02"	},
+	{ "id":1341, "slug": "cpp-module-03"	},
+	{ "id":1342, "slug": "cpp-module-04"	},
+	{ "id":1343, "slug": "cpp-module-05"	},
+	{ "id":1344, "slug": "cpp-module-06"	},
+	{ "id":1345, "slug": "cpp-module-07"	},
+	{ "id":1346, "slug": "cpp-module-08"	},
+	{ "id":2007, "slug": "netpractice"		},
+	{ "id":1983, "slug": "inception"		},
+	{ "id":1336, "slug": "ft_irc"			},
+	{ "id":1332, "slug": "webserv"			},
+	{ "id":1335, "slug": "ft_containers"	},
+	{ "id":1337, "slug": "ft_transcendence"	}
+]
