--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "src/app.ts",
 	"dependencies": {
+		"@types/express": "^4.17.13",
 		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
 		"node-fetch": "^2.1.0",
 		"pretty-ms": "^7.0.0",
 		"typescript": "^4.2.4",
