--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "src/app.ts",
 	"dependencies": {
 		"@types/express": "^4.17.13",
+		"42-connector": "github:codam-coding-college/42-connector#1.0.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"node-fetch": "^2.1.0",
@@ -15,8 +16,7 @@
 	"devDependencies": {
 		"@slack/bolt": "^3.11.1",
 		"@slack/types": "^2.5.0",
-		"@types/dotenv": "^8.2.0",
-		"@types/node": "^15.0.1",
+		"@types/node": "^18.0.1",
 		"@types/node-fetch": "^2.1.0",
 		"ts-node-dev": "^1.1.6"
 	},
