chore: clean up .env-example

--- a/.env-example
+++ b/.env-example
@@ -1,32 +1,21 @@
-# Found at
-# https://api.slack.com/apps/A0367DCH6A0/install-on-team?
+# https://api.slack.com/apps/A03MQA4T4BE/install-on-team?
 SLACK_TOKEN = ""
 
-# Found at
-# https://api.slack.com/apps/A0367DCH6A0/general?
-# under "Signing Secret"
-SIGNING_SECRET = ""
-
-# Look at https://api.slack.com/apps/A0367DCH6A0/event-subscriptions? for the redirect uri
-
-# path to recieve requests on
-EVENT_ENDPOINT = "/slack/events"
+# https://app.slack.com/app-settings/T03652S1FFU/A03MQA4T4BE/socket-mode
+# replace the T03652S1FFU with your own
+SLACK_APP_TOKEN = ""
 
 # Webhook Secret for the Intra API (X-Secret header)
-# https://profile.intra.42.fr/oauth/applications/8540
-# https://admin.intra.42.fr/webhook_registeries/902/edit
+# https://admin.intra.42.fr/webhook_registeries/902
 WEBHOOK_SECRET = ""
 
-# User ID for peerplusplus_bot account on Intra (placeholder for evaluations)
+# User ID for peerplusplus_bot account on Intra
 PEERPP_BOT_UID = 111044
 
 # Peer++ group ID on Intra (assign users to this group to authorize them to do peer++ evals)
 PEERPP_GROUP_ID = 63
 
-# https://app.slack.com/app-settings/T03652S1FFU/A0367DCH6A0/socket-mode
-SLACK_APP_TOKEN = "xapp-1-..."
-
 # Intra application keys
-# See https://profile.intra.42.fr/oauth/applications/7736
-INTRA_UID =
-INTRA_SECRET =
+# https://profile.intra.42.fr/oauth/applications/8540
+INTRA_UID = ""
+INTRA_SECRET = ""
