doc: env-example

--- a/.env-example
+++ b/.env-example
@@ -6,7 +6,8 @@ SLACK_TOKEN = ""
 SLACK_APP_TOKEN = ""
 
 # Webhook Secret for the Intra API (X-Secret header)
-# https://admin.intra.42.fr/webhook_registeries/902
+# The uri should be: https://example.com/webhook
+# https://admin.intra.42.fr/webhook_registeries/902/edit
 WEBHOOK_SECRET = ""
 
 # User ID for peerplusplus_bot account on Intra
