--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "src/app.ts",
 	"dependencies": {
+		"@codam/fast42": "^1.4.1",
 		"@types/express": "^4.17.13",
 		"42-connector": "github:codam-coding-college/42-connector#3.1.0",
 		"dotenv": "^16.0.1",
