--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"dependencies": {
 		"@codam/fast42": "^1.4.1",
 		"@types/express": "^4.17.13",
-		"42-connector": "github:codam-coding-college/42-connector#3.1.0",
+		"cron": "^2.1.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"node-fetch": "^2.1.0",
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@slack/bolt": "^3.11.1",
 		"@slack/types": "^2.5.0",
+		"@types/cron": "^2.0.0",
 		"@types/node": "^18.0.0",
 		"@types/node-fetch": "^2.1.0",
 		"ts-node-dev": "^1.1.6"
