Add additional webhooks

--- a/.env-example
+++ b/.env-example
@@ -8,7 +8,11 @@ SLACK_APP_TOKEN = ""
 # Webhook Secret for the Intra API (X-Secret header)
 # The uri should be: https://example.com/webhook
 # https://admin.intra.42.fr/webhook_registeries/902/edit
-WEBHOOK_SECRET = ""
+# https://admin.intra.42.fr/webhook_registeries/1060/edit
+# https://admin.intra.42.fr/webhook_registeries/1061/edit
+WEBHOOK_CREATE_SECRET = ""
+WEBHOOK_DELETE_SECRET = ""
+WEBHOOK_UDDATE_SECRET = ""
 
 # User ID for peerplusplus_bot account on Intra
 PEERPP_BOT_UID = 111044
