--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"express": "^4.18.1",
 		"node-fetch": "^2.1.0",
 		"pretty-ms": "^7.0.0",
+		"sqlite3": "^5.1.2",
 		"typescript": "^4.2.4",
 		"url-parameter-append": "^1.0.5"
 	},
@@ -20,10 +21,12 @@
 		"@types/cron": "^2.0.0",
 		"@types/node": "^18.0.0",
 		"@types/node-fetch": "^2.1.0",
+		"@types/sqlite3": "^3.1.8",
 		"ts-node-dev": "^1.1.6"
 	},
 	"scripts": {
 		"dev": "ts-node-dev --quiet --rs --respawn --clear --transpile-only src/app.ts",
+		"init-db": "sqlite3 peerdb.sqlite < ./sql/default.sql",
 		"build": "tsc",
 		"start": "node build/app.js"
 	}
