--- a/project_slugs.json
+++ b/project_slugs.json
@@ -13,19 +13,9 @@
 	{ "id":1334, "slug": "philosophers"	 	},
 	{ "id":1315, "slug": "minirt" 			},
 	{ "id":1326, "slug": "cub3d" 			},
-	{ "id":1338, "slug": "cpp-module-00"	},
-	{ "id":1339, "slug": "cpp-module-01"	},
-	{ "id":1340, "slug": "cpp-module-02"	},
-	{ "id":1341, "slug": "cpp-module-03"	},
-	{ "id":1342, "slug": "cpp-module-04"	},
-	{ "id":1343, "slug": "cpp-module-05"	},
-	{ "id":1344, "slug": "cpp-module-06"	},
-	{ "id":1345, "slug": "cpp-module-07"	},
-	{ "id":1346, "slug": "cpp-module-08"	},
 	{ "id":2007, "slug": "netpractice"		},
 	{ "id":1983, "slug": "inception"		},
 	{ "id":1336, "slug": "ft_irc"			},
 	{ "id":1332, "slug": "webserv"			},
-	{ "id":1335, "slug": "ft_containers"	},
-	{ "id":1337, "slug": "ft_transcendence"	}
+	{ "id":1335, "slug": "ft_containers"	}
 ]
