Add update webhook to check for failed evals

--- a/.env-example
+++ b/.env-example
@@ -12,7 +12,7 @@ SLACK_APP_TOKEN = ""
 # https://admin.intra.42.fr/webhook_registeries/1061/edit
 WEBHOOK_CREATE_SECRET = ""
 WEBHOOK_DELETE_SECRET = ""
-WEBHOOK_UDDATE_SECRET = ""
+WEBHOOK_UPDATE_SECRET = ""
 
 # User ID for peerplusplus_bot account on Intra
 PEERPP_BOT_UID = 111044
