--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
 	"botID": 111044,
 	"groupID": 63,
 	"lockExpirationDays": 1,
+	"randomEvalChance": 25,
 	"logOutput": "log.txt",
 	"projects": [
 		{ "id":1314, "name": "libft"		},
