--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,16 @@
 # See README in the root project for more information.
 # -----------------------------------------------------------------------------
 
+# Configure these values according to the config.json file.
+
 version: "3"
 services:
   peerbot:
     container_name: "PeerBot"
     build: ./
     volumes:
-      - ./volume:/app
+       - ./logs:/app/log
+       - ./db:/app/db
     ports:
       - "8080:8080"
       - "3000:3000"
