Implement raven sentry

--- a/config/.env-example
+++ b/config/.env-example
@@ -18,3 +18,4 @@ WEBHOOK_UPDATE_SECRET = ""
 # https://profile.intra.42.fr/oauth/applications/8540
 INTRA_UID = ""
 INTRA_SECRET = ""
+SENTRY_SECRET = ""
