Add ablity to block students

--- a/config/config.json
+++ b/config/config.json
@@ -28,5 +28,6 @@
 		{ "id":1336, "name": "ft_irc"		},
 		{ "id":1332, "name": "webserv"		},
 		{ "id":1335, "name": "ft_containers"}
-	]
+	],
+	"blocked": []
 }
