--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"ts-node-dev": "^1.1.6"
 	},
 	"scripts": {
+		"preinstall": "[ -d .git ] && echo \"#!/bin/bash\\nnpm run lint:check\" > .git/hooks/pre-commit",
 		"dev": "ts-node-dev --quiet --rs --respawn --clear --transpile-only src/app.ts",
 		"init-db": "sqlite3 ./db/peerdb.sqlite < ./sql/default.sql",
 		"build": "tsc",
 		"start": "node build/app.js",
+		"lint:check": "prettier --check src",
 		"lint:fix": "prettier --write src"
 	}
 }
