--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"ts-node-dev": "^1.1.6"
 	},
 	"scripts": {
-		"prepare": "[ -d .git ] && (P=.git/hooks/pre-commit; echo \"#!/bin/sh\\nnpm run lint:check\" > $P; chmod 777 $P)",
+		"prepare": "[ -d .git ] && (P=.git/hooks/pre-commit; echo \"#!/bin/sh\\nnpm run lint:check\" > $P; chmod 777 $P) || true",
 		"dev": "ts-node-dev --quiet --rs --respawn --clear --transpile-only src/app.ts",
 		"init-db": "sqlite3 ./db/peerdb.sqlite < ./sql/default.sql",
 		"build": "tsc",
